Ajustando projeto para começar testes

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 	<description>Beer stock project for testing live coding</description>
 
 	<properties>
-		<java.version>14</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
